--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,8 @@ buildscript {
 	repositories {
 		mavenLocal()
 		mavenCentral()
-		maven {
-			url 'https://repo.spring.io/libs-milestone'
-		}
+		maven { url "https://repo.spring.io/snapshot" }
+		maven { url "https://repo.spring.io/milestone" }
 		flatDir {
 			dirs 'externalLibs'
 		}
