--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,14 @@
 buildscript {
 	ext {
 		springBootVersion = '1.3.5.RELEASE'
-		cfAppVersion = '1.0.1.RC1'
+		cfAppVersion = '1.0.1.RC2'
 	}
 	repositories {
-		mavenLocal()
+//		mavenLocal()
 		mavenCentral()
+		maven { url "https://oss.sonatype.org/content/repositories/releases" }
 		maven { url "https://repo.spring.io/snapshot" }
 		maven { url "https://repo.spring.io/milestone" }
-		flatDir {
-			dirs 'externalLibs'
-		}
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
