--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 buildscript {
 	ext {
 		springBootVersion = '1.4.0.RELEASE'
-		cfAppVersion = '1.0.2.RC1'
+		cfAppVersion = '1.0.4.RELEASE'
 	}
 	repositories {
 //		mavenLocal()
 		mavenCentral()
-//		maven { url "https://oss.sonatype.org/content/repositories/releases" }
+		maven { url "https://oss.sonatype.org/content/repositories/releases" }
+		maven { url "https://repo.spring.io/release" }
 		maven { url "https://repo.spring.io/snapshot" }
 		maven { url "https://repo.spring.io/milestone" }
 	}
@@ -71,6 +72,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-devtools')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('com.google.guava:guava:19.0')
 	compile("org.webjars:bootstrap:3.3.6")
 	compile("org.webjars:jquery:2.2.3")
 	compile('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect')
