--- a/manifest.yml
+++ b/manifest.yml
@@ -4,5 +4,6 @@ applications:
     path: build/libs/cf-show-env-0.1.3-SNAPSHOT.jar
     memory: 512M
 
-buildpack: https://github.com/cloudfoundry/java-buildpack.git
+# buildpack: https://github.com/cloudfoundry/java-buildpack.git
+buildpack: java_buildpack_offline_trust_appd
 # buildpack: java_buildpack_offline
