--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,17 @@ test:
 logging:
   pattern:
     console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID:- }){magenta} %clr(---){faint} %clr([trace=%X{X-Trace-Id:-},span=%X{X-Span-Id:-}]){yellow} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%replace(%xException){'\n','\\n'}%nopex%n"
+
+application:
+  version: abcdefg
+
+spring:
+  resources:
+    chain:
+      cache: true
+      strategy:
+        content:
+          enabled: true
+        fixed:
+          enabled: true
+          version: 1.0
