--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,22 +1,3 @@
----
-test:
-  key:
-    someval
-
 logging:
-  pattern:
-    console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID:- }){magenta} %clr(---){faint} %clr([trace=%X{X-Trace-Id:-},span=%X{X-Span-Id:-}]){yellow} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%replace(%xException){'\n','\\n'}%nopex%n"
-
-application:
-  version: abcdefg
-
-spring:
-  resources:
-    chain:
-      cache: true
-      strategy:
-        content:
-          enabled: true
-        fixed:
-          enabled: true
-          version: 1.0
+  level:
+    root: DEBUG
