--- a/build.gradle
+++ b/build.gradle
@@ -25,11 +25,21 @@ plugins {
 	id "com.github.pivotalservices.cf-app" version "1.0.9"
 }
 
+version = "1.0-SNAPSHOT"
+group = "org.bk.cf"
+
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
-
 apply from: 'gradle/gatling.gradle'
+apply plugin: 'maven'
+
+springBoot {
+    buildInfo()
+}
+
+
 
 //apply plugin: 'cf-app'
 
@@ -85,10 +95,6 @@ cfConfig {
 //    }
 }
 
-jar {
-    baseName = 'cf-show-env'
-    version = '0.1.3-SNAPSHOT'
-}
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
