--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,7 @@
 ---
 applications:
   - name: cf-show-env
-    path: build/libs/cf-show-env-1.0-SNAPSHOT.jar
+    path: build/libs/cf-show-env-1.0.0-M1.jar
     memory: 2G
 
 buildpack: https://github.com/cloudfoundry/java-buildpack.git
